Resources/k8s/kustomize/base/other/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokeapi-ingress
  annotations:
    ingress.kubernetes.io/config-backend: |
        compression algo gzip
        compression type application/json
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 8080
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: /api/v3
            pathType: Prefix
            backend:
              service:
                name: pokeapi
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-ingress
  annotations:
    ingress.kubernetes.io/config-backend: |
      http-request replace-path /graphql(.*) \1
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 8080
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: graphql
                port:
                  number: 8080
